--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
 <ul>
 <li>
 最新官网
-<a href="https://m.shayu001.top/" target="_blank"><i>点击即达官网</i></a>
+<a href="https://m.shayuyun.icu/" target="_blank"><i>点击即达官网</i></a>
 <a>注意：如果点击没反应，请更换浏览器（如火狐、谷歌浏览器等）或 网络尝试 。</a>
 <br>
 备用官网
