--- a/index.html
+++ b/index.html
@@ -517,15 +517,17 @@
 <div id="all">
 <div class="wrapper">
 <div class="main">
-<h1>鲨鱼加速发布页</h1>
+<h1>鲨鱼云防失联发布页</h1>
 <div class="content">
 <div class="content-top">
 <h2>请按 Ctrl+D 收藏不迷路</h2>
+<li>
+本发布页地址<a href="https://shayu.pages.dev/" target="_blank"><i>https://shayu.pages.dev/</i></a>
 <ul>
 <li>
-最新官网
+鲨鱼云最新官网
 <a href="https://m.shayuyun.icu/" target="_blank"><i>点击即达官网</i></a>
-<a>注意：如果点击没反应，请更换浏览器（如火狐、谷歌浏览器等）或 网络尝试 。</a>
+
 <br>
 备用官网
 <a href="https://m.syy5.top" target="_blank"><i>点击即达官网</i></a>
