--- a/index.html
+++ b/index.html
@@ -528,12 +528,21 @@
 鲨鱼云最新官网
 <a href="https://m.shayuyun.icu/" target="_blank"><i>点击即达官网</i></a>
 
-<br>
 备用官网
 <a href="https://m.syy5.top" target="_blank"><i>点击即达官网</i></a>
-
 </li>
+	
 <li>
+鲨鱼商店
+<a href="https://mfaka.shayu001.top/" target="_blank"><i>点击即达官网</i></a>
+</li>
+	
+<li>
+鲨鱼影视
+<a href="https://mtv.shayu002.top/" target="_blank"><i>点击即达官网</i></a>
+</li>
+	
+<li>	
 TG通知频道
 <a href="https://t.me/sharkcloud1" target="_blank"><i>点击关注TG通知频道</i></a>
 
