--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
 <div class="content-top">
 <h2>请按 Ctrl+D 收藏不迷路</h2>
 <li>
-本发布页地址<a href="https://shayu.pages.dev/" target="_blank"><i>https://shayu.pages.dev/</i></a>
+<li>本发布页地址<a href="https://shayu.pages.dev/" target="_blank"><i>shayu.pages.dev</i></a></li>
 <ul>
 <li>
 鲨鱼云最新官网
@@ -536,11 +536,7 @@
 鲨鱼商店
 <a href="https://mfaka.shayu001.top/" target="_blank"><i>点击即达官网</i></a>
 </li>
-	
-<li>
-鲨鱼影视
-<a href="https://mtv.shayu002.top/" target="_blank"><i>点击即达官网</i></a>
-</li>
+
 	
 <li>	
 TG通知频道
