--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
 <div class="content-top">
 <h2>请按 Ctrl+D 收藏不迷路</h2>
 <li>
-<li>本发布页地址<a href="https://shayu.pages.dev/" target="_blank"><i>shayu.pages.dev</i></a></li>
+<li><a href="https://shayu.pages.dev/" target="_blank"><i>永久发布页地址： shayu.pages.dev</i></a></li>
 <ul>
 <li>
 鲨鱼云最新官网
@@ -537,11 +537,12 @@
 <a href="https://mfaka.shayu001.top/" target="_blank"><i>点击即达官网</i></a>
 </li>
 
-	
+<!--
 <li>	
 TG通知频道
 <a href="https://t.me/sharkcloud1" target="_blank"><i>点击关注TG通知频道</i></a>
-
+-->	
+	
 </li>
 </ul>
 </div>
