--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
 	
 <li>
 鲨鱼商店
-<a href="https://mfaka.shayu001.top/" target="_blank"><i>点击即达官网</i></a>
+<a href="https://mfaka.shayu001.top/" target="_blank"><i>点击即达官网</i>
 	鲨鱼影视<a href="https://mfaka.shayu001.top/" target="_blank"><i>点击即达官网</i></a>
 </li>
 
