--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
 <li>
 鲨鱼商店
 <a href="https://mfaka.shayu001.top/" target="_blank"><i>点击即达官网</i></a>
-	鲨鱼影视<a href="https://mfaka.shayu001.top/" target="_blank"><i>点击即达官网</i></a>
+	鲨鱼影视<a href="https://mtv.shayu002.top/" target="_blank"><i>点击即达官网</i></a>
 </li>
 
 <!--
