--- a/index.html
+++ b/index.html
@@ -528,8 +528,10 @@
 鲨鱼云最新官网
 <a href="https://m.shayuyun.icu/" target="_blank"><i>点击即达官网</i></a>
 
-备用官网
+备用官网1
 <a href="https://m.syy5.top" target="_blank"><i>点击即达官网</i></a>
+	备用官网2
+<a href="https://syy.012023.xyz" target="_blank"><i>点击即达官网</i></a>
 </li>
 	
 <li>
