--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-6<!DOCTYPE html>
+<!DOCTYPE html>
 <!-- saved from url=(0019)https://www.sycloud.dev/ -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
@@ -522,7 +522,7 @@
 <div class="content-top">
 <h2> 建议保存到微信收藏 不迷路 </h2>
 <li>
-<li><a href="https://shayu.pages.dev/" target="_blank"><i>   永久发布页地址： shayu.pages.dev </i></a></li>
+<li><a href="https://798777.xyz/" target="_blank"><i>   永久发布页地址： shayu.pages.dev </i></a></li>
 <ul>
 <li>
 鲨鱼云最新官网
@@ -537,7 +537,7 @@
 <li>
 鲨鱼商店
 <a href="https://mfaka.shayu001.top/" target="_blank"><i>点击即达官网</i></a>
-	鲨鱼影视<a href="https://syys.5658.buzz/" target="_blank"><i>点击即达官网</i></a>
+	鲨鱼影视<a href="https://tv.shayu002.top/" target="_blank"><i>点击即达官网</i></a>
 </li>
 
 <!--
