--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
 <div class="content-top">
 <h2> 建议保存到微信收藏 不迷路 </h2>
 <li>
-<li><a href="https://798777.xyz/" target="_blank"><i>   永久发布页地址： shayu.pages.dev </i></a></li>
+<li><a href="https://798777.xyz/" target="_blank"><i>   永久发布页地址： 798777.xyz </i></a></li>
 <ul>
 <li>
 鲨鱼云最新官网
