--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
 备用官网1
 <a href="https://m.syy5.top" target="_blank"><i>点击即达官网</i></a>
 	备用官网2
-<a href="https://m.798777.xyz" target="_blank"><i>点击即达官网</i></a>
+<a href="https://sy.345618.xyz" target="_blank"><i>点击即达官网</i></a>
 </li>
 	
 <li>
