--- a/index.html
+++ b/index.html
@@ -529,9 +529,7 @@
 <a href="https://m.shayuyun.icu/" target="_blank"><i>点击即达官网</i></a>
 
 备用官网1
-<a href="https://m.syy5.top" target="_blank"><i>点击即达官网</i></a>
-	备用官网2
-<a href="https://sy.345618.xyz" target="_blank"><i>点击即达官网</i></a>
+<a href="https://syy5.top" target="_blank"><i>点击即达官网</i></a>
 </li>
 	
 <li>
