--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
 鲨鱼云最新官网
 <a href="https://m.shayuyun.icu/" target="_blank"><i>点击即达官网</i></a>
 
-备用官网1
+备用官网
 <a href="https://syy5.top" target="_blank"><i>点击即达官网</i></a>
 </li>
 	
