--- a/index.html
+++ b/index.html
@@ -526,15 +526,15 @@
 <ul>
 <li>
 鲨鱼云最新官网
-<a href="https://m.shayuyun.icu/" target="_blank"><i>点击即达官网</i></a>
+<a href="https://m1.shayuyun.icu/" target="_blank"><i>点击即达官网</i></a>
 
 备用官网
-<a href="https://syy5.top" target="_blank"><i>点击即达官网</i></a>
+<a href="https://m1.syy5.top" target="_blank"><i>点击即达官网</i></a>
 </li>
 	
 <li>
 鲨鱼商店
-<a href="https://faka.shayu001.top/" target="_blank"><i>点击即达官网</i></a>
+<a href="https://faka1.shayu001.top/" target="_blank"><i>点击即达官网</i></a>
 	鲨鱼影视<a href="https://syys5.top/" target="_blank"><i>点击即达官网</i></a>
 </li>
 
