--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
 	鲨鱼视频<a href="https://m.syys5.top/" target="_blank"><i>点击即达官网</i></a>
 </li>
 	<li>鲨鱼4K影视
-<a href="https://syys5.top/search?box=&type=video&url=" target="_blank"><i>点击即达官网</i></a>
+<a href="https://syys5.top/whatsnew?filter=last&num=100&type=video&cat=daily" target="_blank"><i>点击即达官网</i></a>
 </li>
 <!--
 <li>	
