--- a/index.html
+++ b/index.html
@@ -531,12 +531,12 @@
 备用官网
 <a href="https://m1.syy5.top" target="_blank"><i>点击即达官网</i></a>
 </li>
-<!--	
+
 <li>
 鲨鱼商店
 <a href="https://faka.syys5.top/" target="_blank"><i>点击即达官网</i></a>
-	鲨鱼视频<a href="https://m.syys5.top/" target="_blank"><i>点击即达官网</i></a>
-</li>
+</li><!--		鲨鱼视频<a href="https://m.syys5.top/" target="_blank"><i>点击即达官网</i></a>
+
 	
 
 <li>	
