--- a/index.html
+++ b/index.html
@@ -525,11 +525,11 @@
 <li><a href="https://shayu.pages.dev/" target="_blank"><i>   永久发布页地址： shayu.pages.dev </i></a></li>
 <ul>
 <li>
-鲨鱼云最新官网
-<a href="https://m1.shayuyun.icu/" target="_blank"><i>点击即达官网</i></a>
+鲨鱼云最新官网（订阅还没到期的，账号,密码一样，登录进去自行修改密码）
+<a href="https://user.shayuyun.icu/" target="_blank"><i>点击即达官网</i></a>
 
-备用官网
-<a href="https://m1.syy5.top" target="_blank"><i>点击即达官网</i></a>
+备用官网(订阅没到期的话，账号密码一样，登录进去自行修改密码)
+<a href="https://user.syy5.top" target="_blank"><i>点击即达官网</i></a>
 </li>
 
 <li>
