--- a/index.html
+++ b/index.html
@@ -535,10 +535,10 @@
 <li>
 鲨鱼商店
 <a href="https://faka.syys5.top/" target="_blank"><i>点击即达官网</i></a>
-</li><!--		鲨鱼视频<a href="https://m.syys5.top/" target="_blank"><i>点击即达官网</i></a>
+</li>		鲨鱼EMBY(内测）<a href="https://user.shayuyun.icu/" target="_blank"><i>点击官网发工单申请账号</i></a>
 
 	
-
+<!--
 <li>	
 TG通知频道
 <a href="https://t.me/sharkcloud1" target="_blank"><i>点击关注TG通知频道</i></a>
