--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
 <li>
 鲨鱼商店
 <a href="https://faka.syys5.top/" target="_blank"><i>点击即达官网</i></a>
-</li>		鲨鱼EMBY(内测）<a href="https://user.shayuyun.icu/" target="_blank"><i>点击官网发工单申请账号</i></a>
+</li></a>		<li>鲨鱼EMBY(内测）<a href="https://user.shayuyun.icu/" target="_blank"><i>点击官网发工单申请账号</i></a>
 
 	
 <!--
