--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
 
 <!--
 	
-</li></a>		<li>鲨鱼EMBY<a href="https://user.shayuyun.icu/" target="_blank"><i>点击官网发工单申请账号</i></a>
+</li></a>		<li>鲨鱼EMBY<a href="https://user.798777.xyz/" target="_blank"><i>点击官网发工单申请账号</i></a>
 
 	
 
