--- a/index.html
+++ b/index.html
@@ -522,8 +522,7 @@
 <div class="content-top">
 <h2> 建议保存到微信收藏 不迷路 </h2>
 <li>
-<li><a href="https://shayu.pages.dev/" target="_blank"><i>   永久发布页地址1： 798777.xyz </i></a></li>
-<li><a href="https://shayu.pages.dev/" target="_blank"><i>   永久发布页地址2： shayu.pages.dev </i></a></li><ul>
+<li><a href="https://shayu.pages.dev/" target="_blank"><i>   永久发布页地址： shayu.pages.dev </i></a></li><ul>
 <li>
 鲨鱼云最新官网
 <a href="https://user.shayuyun.icu/" target="_blank"><i>点击即达官网</i></a>
