--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
 	
 <li>
 鲨鱼商店
-<a href="https://faka.syys5.top/" target="_blank"><i>点击即达官网</i></a>	
+<a href="https://faka.798777.xyz/" target="_blank"><i>点击即达官网</i></a>	
 	
 <!--
 	
