--- a/index.html
+++ b/index.html
@@ -525,10 +525,10 @@
 <li><a href="https://shayu.pages.dev/" target="_blank"><i>   永久发布页地址： shayu.pages.dev </i></a></li><ul>
 <li>
 鲨鱼云最新官网
-<a href="https://user.shayuyun.icu/" target="_blank"><i>点击即达官网</i></a>
+<a href="https://user.798777.xyz/" target="_blank"><i>点击即达官网</i></a>
 
 备用官网
-<a href="https://user.798777.xyz" target="_blank"><i>点击即达官网</i></a>
+<a href="https://user.shayuyun.de" target="_blank"><i>点击即达官网</i></a>
 </li>
 	
 <li>
