--- a/index.html
+++ b/index.html
@@ -525,27 +525,27 @@
 <li><a href="https://shayu.pages.dev/" target="_blank"><i>   永久发布页地址： shayu.pages.dev </i></a></li><ul>
 <li>
 鲨鱼云最新官网
-<a href="https://user.798777.xyz/" target="_blank"><i>点击即达官网</i></a>
+<a href="https://user.shayuyun.de/" target="_blank"><i>点击即达官网</i></a>
 
 备用官网
-<a href="https://user.shayuyun.de" target="_blank"><i>点击即达官网</i></a>
+<a href="https://user.798777.xyz/" target="_blank"><i>点击即达官网</i></a>
 </li>
 	
 <li>
 鲨鱼商店
-<a href="https://faka.798777.xyz/" target="_blank"><i>点击即达官网</i></a>	
-	
-<!--
-	
-</li></a>		<li>鲨鱼EMBY<a href="https://user.798777.xyz/" target="_blank"><i>点击官网发工单申请账号</i></a>
-
-	
-
-
+<a href="https://faka.shayuyun.de/" target="_blank"><i>点击即达官网</i></a>	
 <li>
 	
 TG通知频道
-<a href="https://t.me/sharkcloud1" target="_blank"><i>点击关注TG通知频道</i></a>
+<a href="https://t.me/sharkcloud1" target="_blank"><i>点击关注TG通知频道</i></a>	
+<!--
+	
+</li></a>		<li>鲨鱼EMBY<a href="https://user.shayuyun.de/" target="_blank"><i>点击官网发工单申请账号</i></a>
+
+	
+
+
+
 -->	
 	
 </li>
