--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
 <a href="https://shayu1.shayuyun.de/" target="_blank"><i>点击即达官网</i></a>
 
 备用官网
-<a href="https://user.shayuyun.de/" target="_blank"><i>点击即达官网</i></a>
+<a href="https://user.798777.xyz/" target="_blank"><i>点击即达官网</i></a>
 </li>
 	
 
